<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivHeaderReport"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/desc_report_pdf"
            android:focusable="true"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_save"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/ivHeaderHome"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/dashboard_title"
            android:focusable="true"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_today"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/ivHeaderProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/default_username"
            android:focusable="true"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_myplaces"
            app:tint="@color/white" />
    </LinearLayout>
</merge>